--- a/frontend/src/common/css/Main.css
+++ b/frontend/src/common/css/Main.css
@@ -133,7 +133,7 @@
   width: 100%;
   height: 100%;
   border-style: none;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   transition: transform 0.5s ease-in-out;
 }
@@ -143,7 +143,7 @@
   width: 100%;
   height: 100%;
   background-image: inherit;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   border-style: none;
   background-position: center center;
@@ -300,7 +300,7 @@
     border-style: none;
     width: 100%;
     height: 100%;
-    background-size: 0 0;
+    background-size: cover;
     background-repeat: no-repeat;
     transition: transform 0.5s ease-in-out;
   }
